--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.gitignore
 Untitled-1.ipynb
 archive/
 MODELDATASET/
@@ -9,3 +10,5 @@ output.png
 __pycache__/
 stuff/
 img/
+revisiones/
+rotaciones.ipynb
