--- a/valparams.yaml
+++ b/valparams.yaml
@@ -3,11 +3,11 @@ carpetas:
   direccion : "/mnt/6C24E28478939C77/Saulo/ProyectoPHD/"
   objeto : "objects"
   path_weights : '/mnt/6C24E28478939C77/Saulo/ProyectoPHD/position/weights_entrenamiento_MLP_xavier_normal_2.pth'
-  csv_name: 'NBV_Voxnet5.csv'
+  csv_name: 'NBV_Voxnet6.csv'
 
 variables:
   umbral : 0.0035
-  voxel_resolution: .1
+  voxel_resolution: 0.025
   maximum_views : 15
 
 #Camera params
